--- a/branch/trunk/sopwith.html
+++ b/branch/trunk/sopwith.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title> SDL Sopwith c8c4c21 </title>
+    <title> SDL Sopwith git-5ded03f </title>
     <style>
       body {
         background-color: black;
