Build from fragglet/sdl-sopwith@a31cc487b6971200d945742645973616ac5f6d7c

--- a/branch/trunk/sopwith.html
+++ b/branch/trunk/sopwith.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title> SDL Sopwith git-c26af43 </title>
+    <title> SDL Sopwith git-a31cc48 </title>
     <style>
       body {
         background-color: black;
@@ -48,6 +48,9 @@
     <img id="loading" src="loading.gif">
 
     <script type='text/javascript'>
+      function openManual() {
+        window.open("doc/sopwith.html");
+      }
       function programError() {
         canvas.style.visibility = "hidden";
         loadingElement.style.visibility = "visible";
