Build from fragglet/sdl-sopwith@c53dc26441c4ab9caf5e839a1b6f7213dec81d6e

--- a/branch/trunk/sopwith.html
+++ b/branch/trunk/sopwith.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title> SDL Sopwith git-a31cc48 </title>
+    <title> SDL Sopwith git-c53dc26 </title>
     <style>
       body {
         background-color: black;
@@ -49,7 +49,7 @@
 
     <script type='text/javascript'>
       function openManual() {
-        window.open("doc/sopwith.html");
+        window.open("doc/sopwith-emscripten.html");
       }
       function programError() {
         canvas.style.visibility = "hidden";
