--- a/branch/trunk/sopwith.html
+++ b/branch/trunk/sopwith.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title> SDL Sopwith git-a755414 </title>
+    <title> SDL Sopwith git-5efa1e6 </title>
     <style>
+      :root {
+        touch-action: pan-x pan-y;
+      }
       body {
         background-color: black;
       }
@@ -17,7 +20,9 @@
       }
       canvas.emscripten {
         visibility: hidden;
-        height: 90vh;
+        width: 100vw;
+        height: 100vh;
+        transform: none;
       }
     </style>
 
